# vulpo

./: Cargo.toml  LICENSE  build.rs
benches/: sprite.rs
docs/: projects.md  refs.md  todo.md
examples/: sprite.rs  texture.rs
src/: lib.rs  state.rs  texture.rs  vertex.rs
src/backend/: mod.rs  renderer.rs  shader.rs  sprite.rs  state.rs  swapchain.rs  target.rs  vertex.rs  window.rs
src/backend/pipeline/: mod.rs  sprite.rs  texture.rs
src/backend/resource/: mod.rs  sampler.rs  texture.rs  uniform.rs
src/shaders/: shader.frag  sprite.frag  sprite.frag.spv  sprite.vert  sprite.vert.spv  texture.frag  texture.vert
