[package]
name = "vulpo"
version = "0.1.0"
authors = ["skyne98 <ahalahan@gmail.com>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
winit = "0.24.0"
wgpu = "0.6.2"
image = "0.23.12"
cgmath = "0.18.0"
env_logger = "0.8.2"
log = "0.4.14"
futures = "0.3.12"
bytemuck = { version = "1.5.0", features = [ "derive" ] }
anyhow = "1.0.38"
ultraviolet = "0.7.5"
rayon = "1.5.0"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.7"
