[package]
name = "vulpo"
version = "0.1.0"
authors = ["skyne98 <ahalahan@gmail.com>"]
edition = "2018"
resolver = "2"

[[bench]]
name = "sprite"
path = "benches/sprite.rs"
harness = false

[profile.release]
lto = true
debug = true

[dependencies]
winit = "0.26.0"
wgpu = "0.11.1"
image = "0.23.14"
cgmath = "0.18.0"
env_logger = "0.9.0"
log = "0.4.14"
futures = "0.3.18"
bytemuck = { version = "1.7.2", features = ["derive"] }
anyhow = "1.0.51"
ultraviolet = { version = "0.8.1", features = ["bytemuck"] }
rayon = "1.5.1"
num_cpus = "1.13.0"

[dev-dependencies]
criterion = "0.3.5"

[build-dependencies]
anyhow = "1.0.51"
fs_extra = "1.2.0"
glob = "0.3.0"
shaderc = "0.7.3"
